solved gap on the right on some mobile configurations

--- a/html/css/style.css
+++ b/html/css/style.css
@@ -353,6 +353,9 @@ a {
 
 
 @media screen and (max-width: 639px) {
+	.row {
+		margin: 0;
+	}
 	.facsimiles {
 		visibility: hidden;
 		padding: 0;
